# trav

./: Cargo.toml  README.md
trav-cli/: Cargo.toml
trav-cli/src/: main.rs
trav-core/: Cargo.toml
trav-core/src/: disk.rs  engine.rs  error.rs  lib.rs  magnet.rs  manager.rs  message.rs  metainfo.rs  path_safety.rs  snapshot.rs  swarm.rs  tracker.rs
trav-core/src/dht/: krpc.rs  mod.rs  routing.rs  server.rs
trav-core/src/peer/: connection.rs  extension.rs  mod.rs  protocol.rs
trav-gui/: package-lock.json  package.json
trav-gui/src-tauri/: Cargo.toml  tauri.conf.json
trav-gui/src-tauri/src/: main.rs
trav-gui/src/app/: layout.tsx  page.tsx
trav-gui/src/components/: PieceMap.tsx  SpeedChart.tsx
trav-tui/: Cargo.toml
trav-tui/src/: app.rs  lib.rs  state.rs
trav-tui/src/widgets/: table.rs
