[workspace]
members = [
    "trav-core",
    "trav-tui",
    "trav-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
hex = "0.4"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = { version = "0.7", features = ["codec"] }
urlencoding = "2.1"
serde_bytes = "0.11"
